QdbS Changelog:

[ ?.?? ] - ??/??/2022 [mm/dd/yyyy]
Changed database code to use PDO
Fix for database type not defaulting to mysql if not set in settings.php
Fix for install script attempting install despite field errors
Added initial admin username and password options to install

[ 1.14 ] - 05/06/2022 (mm/dd/yyyy)
Changed changed the syntax of some SQL queries to use LIMIT and OFFSET instead of just LIMIT
Changed some SQL queries to not use NULL for id fields in INSERTs
Added PostgreSQL support
Fix for SQL errors when invalid quote limit is specified when changing settings
Fix to prevent setting quote limit to 0
Fix for "Trying to access array offset on value of type null" error
Fixed misssing (q|r)_count variables in admin footer template calls
Fixed misssing (q|r)_count variables in footer template calls
Fix for undefined variable and array offset on value of type null errors
Added simple RSS feed
Update layout_header.tpl (PeGaSuS-Coder)
Fix for case sensitive searches while using PostgreSQL
Added missing comment to installer about table prefix

[ 1.13 ] - 06/19/2020 (mm/dd/yyyy)
Fix for incorrect error handling of mysqli_connect in install script
Fix for issue adding intial admin during install
Fix for issue adding quote
Fix for quote approval and admin addition not working due to incorrect NULL in SQL query
Added a little better error handling
Moved remaining mysqli_*() functions to classes.php
Removed blank settings.php
Changed a couple of QdbS_Database class function names

[ 1.12 ] - 09/27/2017 (mm/dd/yyyy)
Changed mysql_*() to mysqli_*()

[ 1.11 ] - 06/05/2012 (mm/dd/yyyy)
Updated the version number in doc/index.html
Added "randomquote" page to display a single random quote
Changed class names in classes.php
Fixed warnings caused by unquoted array indexes
Fixed warnings caused by non-existant array indexes

[ 1.10 ] - 08/29/2008 (mm/dd/yyyy)
Fixed install ussue where MySQL username with upper case letters would prevent initial login