@@ -5,6 +5,7 @@ Changed database code to use PDO
 Fix for database type not defaulting to mysql if not set in settings.php
 Fix for install script attempting install despite field errors
 Added initial admin username and password options to install
+Fix to prevent recording votes for quotes that don't exist
 
 [ 1.14 ] - 05/06/2022 (mm/dd/yyyy)
 Changed changed the syntax of some SQL queries to use LIMIT and OFFSET instead of just LIMIT
